--- a/category-template.html
+++ b/category-template.html
@@ -7,7 +7,8 @@
 <link href='https://2.bp.blogspot.com/-oklc2TkrOUE/WK-efczfIkI/AAAAAAAAAz4/FdwsQ3YgN0olg97UHUgnuwx1hyn_MoS6ACLcB/s1600/favicon-32x32.png' rel='icon' sizes='32x32'/>
 <link href='https://4.bp.blogspot.com/-gqXR6U7fwTM/WK-eTBAZwnI/AAAAAAAAAzw/_TT7XLElkZUd81tUlRQ5LYCycAYabSy_gCLcB/s1600/android-icon-192x192.png' rel='icon' sizes='192x192'/>
 <link href='https://4.bp.blogspot.com/-KIVgeyajeco/WK-eZ6lovlI/AAAAAAAAAz0/mm9Oo7rnGGgWUXTRqI-t8F-NNLXmYEPKwCLcB/s1600/apple-icon-180x180.png' rel='apple-touch-icon-precomposed'/>
-<meta content='https://2.bp.blogspot.com/-FA0A3Jy6uqY/WK-eibluKhI/AAAAAAAAAz8/it5CrRWZWAgZI-AhGNyHlUgqwqbo3BJnQCLcB/s1600/ms-icon-144x144.png' name='msapplication-TileImage'/><title>Template</title>
+<meta content='https://2.bp.blogspot.com/-FA0A3Jy6uqY/WK-eibluKhI/AAAAAAAAAz8/it5CrRWZWAgZI-AhGNyHlUgqwqbo3BJnQCLcB/s1600/ms-icon-144x144.png' name='msapplication-TileImage'/>
+  <title>Template</title>
 
 <style type='text/css'>
 /*<![CDATA[*/
@@ -678,7 +679,7 @@ document.write;var loadToc,loadCategories,_toc={init:function(){var e={homePage:
 <div class='content-wrapper'>
 <div class='footer1'>
 <div class='logo-footer'>
-<a href='http://www.cobangetik.com/' title='Coba Ngetik'><amp-img alt='Logo Footer Coba Ngetik' height='50' src='https://2.bp.blogspot.com/-PXNwLNr2rBE/WK-bm6Y4PdI/AAAAAAAAAzk/AeqQB2fDF_g5Pg0XKvkqzYZ70qJuQI_kACLcB/s1600/footer-cn.png' title='Coba Ngetik' width='347'></amp-img></a>
+<a href='http://www.cobangetik.com/' title='Coba Ngetik'><img alt='Logo Footer Coba Ngetik' height='50' src='https://2.bp.blogspot.com/-PXNwLNr2rBE/WK-bm6Y4PdI/AAAAAAAAAzk/AeqQB2fDF_g5Pg0XKvkqzYZ70qJuQI_kACLcB/s1600/footer-cn.png' title='Coba Ngetik' width='347'></amp-img></a>
 </div>
 <p>Blog yang membahas tentang Tutorial, Tips, Trik, Internet, dan Belajar SEO.</p>
 </div>
