--- a/template.html
+++ b/template.html
@@ -678,7 +678,7 @@ document.write;var loadToc,loadCategories,_toc={init:function(){var e={homePage:
 <div class='content-wrapper'>
 <div class='footer1'>
 <div class='logo-footer'>
-<a href='http://www.cobangetik.com/' title='Coba Ngetik'><amp-img alt='Logo Footer Coba Ngetik' height='50' src='https://2.bp.blogspot.com/-PXNwLNr2rBE/WK-bm6Y4PdI/AAAAAAAAAzk/AeqQB2fDF_g5Pg0XKvkqzYZ70qJuQI_kACLcB/s1600/footer-cn.png' title='Coba Ngetik' width='347'></amp-img></a>
+<a href='http://www.cobangetik.com/' title='Coba Ngetik'><img alt='Logo Footer Coba Ngetik' height='50' src='https://2.bp.blogspot.com/-PXNwLNr2rBE/WK-bm6Y4PdI/AAAAAAAAAzk/AeqQB2fDF_g5Pg0XKvkqzYZ70qJuQI_kACLcB/s1600/footer-cn.png' title='Coba Ngetik' width='347'></amp-img></a>
 </div>
 <p>Blog yang membahas tentang Tutorial, Tips, Trik, Internet, dan Belajar SEO.</p>
 </div>
