--- a/template.html
+++ b/template.html
@@ -719,7 +719,7 @@ Copyright &#169; <span itemprop='copyrightYear'><script>document.write((new Date
 </div>
 <script type='text/javascript'>
 //<![CDATA[
-function downloadJSAtOnload(){var e=document.createElement("script");e.src="https://firebasestorage.googleapis.com/v0/b/kompijs.appspot.com/o/JS%2Fka2.js?alt=media&token=b2fae94b-5db9-4faf-afd8-68f081f6b907",document.body.appendChild(e)}window.addEventListener?window.addEventListener("load",downloadJSAtOnload,!1):window.attachEvent?window.attachEvent("onload",downloadJSAtOnload):window.onload=downloadJSAtOnload;
+function downloadJSAtOnload(){var e=document.createElement("script");e.src="https://cdn.rawgit.com/CobaNgetik/Js/master/cn.js",document.body.appendChild(e)}window.addEventListener?window.addEventListener("load",downloadJSAtOnload,!1):window.attachEvent?window.attachEvent("onload",downloadJSAtOnload):window.onload=downloadJSAtOnload;
 function openMenuheader(){document.getElementById("menu-open").classList.toggle("open-menu");};
 //]]>
 </script>
