--- a/htmleditor.html
+++ b/htmleditor.html
@@ -9,7 +9,7 @@
   <link href="css/cloudEdit.min.css" rel="stylesheet">
   <link href="css/contextMenu.min.css" rel="stylesheet">
   <link href="css/font-awesome.min.css" rel="stylesheet">
-  <meta name="description" content="Test your JavaScript, CSS, HTML or CoffeeScript online with Kompi Ajaib: HTML Live Editor." />
+  <meta name="description" content="Test your JavaScript, CSS, HTML or CoffeeScript online with Coba Ngetik: HTML Live Editor." />
   <meta name="keywords" content="online javascript editor, testing javascript online, online code playground, online code editor, html, css, javascript" />
 </head>
 
@@ -24,7 +24,7 @@
         <button class="btn" id="liveEdit" title="Toggle Live Edit Mode">LiveEdit</button>
       </div><!--
       --><div class="column-33">
-        <h1>Kompi Ajaib: HTML Live Editor</h1>
+        <h1>Coba Ngetik: HTML Live Editor</h1>
       </div><!--
       --><div class="column-33 btnGroup last">
         <button class="btn" id="previewToggle" title="Enlarge Preview">Preview</button>
